# splitter

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/splitter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni.cpp
app/src/main/java/com/example/splitter/: App.kt  AudioInputStream.kt  AudioServiceBinder.kt  CaptureActivity.kt  CaptureService.kt  FifoReader.kt  MainActivity.kt  MainTabbed.kt  OpusEncoder.kt  QREncoder.java  QrCodeScanner.kt  ReceiveFragment.kt  ReceiveService.kt  ShareFragment.kt  WifiDirectManager.kt
app/src/main/res/animator/: morph_play.xml  rotation.xml
app/src/main/res/drawable/: animated_play.xml  animated_wait.xml  ic_close.xml  ic_connect.xml  ic_disconnect.xml  ic_launcher_background.xml  ic_pause.xml  ic_play.xml  ic_receive.xml  ic_receive_white.xml  ic_send.xml  ic_send_white.xml  ic_splitter.xml  ic_wait.xml
app/src/main/res/drawable-night/: ic_receive.xml  ic_send.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_capture.xml  activity_main.xml  fragment_main_tabbed.xml  fragment_receive.xml  fragment_share.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: theme.xml
app/src/main/res/values-notnight/: theme.xml
app/src/test/java/com/example/splitter/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libopus/: CMakeLists.txt  build.gradle
libopus/src/main/: AndroidManifest.xml
